Fixes button misalignment (DT-1115)

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -920,6 +920,7 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
 }
 
 .widget.profile form input {
+  vertical-align: top;
     width: 210px;
     height: 60px;
     padding: 0;
@@ -940,8 +941,9 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
 }
 
 .widget.profile form button {
+  vertical-align: top;
     width: 78px;
-    height: 45px;
+    height: 44px;
     margin: 0;
     padding: 0;
     border-right: 1px solid @color-swatch7;
@@ -955,7 +957,7 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
     text-decoration: none;
     text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
     position: relative;
-    top: 6px;
+    top: -1px;
     border: 1px solid @color-swatch1;
     box-shadow: 2px 2px 0px rgba(210,210,210,0.7);
     text-decoration: none;
@@ -1022,6 +1024,8 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
     border: 1px solid @color-swatch1;
     box-shadow: 3px 3px 0px darken(@color-swatch2,3%);
     max-width: 300px;
+    vertical-align: top;
+
 }
 
 .widget.signupform fieldset input:focus {
@@ -1029,8 +1033,9 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
 }
 
 .widget.signupform button {
+    vertical-align: top;
     width: 100%;
-    height: 60px;
+    height: 61px;
     margin: 0;
     padding: 0;
     border: 1px solid #FFF;
@@ -1039,7 +1044,7 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
     text-decoration: none;
     text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
     position: relative;
-    top: 5px;
+    top: 0;
     max-width: 150px;
 }
 
@@ -1740,6 +1745,7 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
         font-size: 13px;
         line-height: 37px;
         vertical-align: top;
+        position: relative;
         top: -1px;
         &:hover {
             background-color: @font-swatch7-background-color-hover;
